# stockBar

./: .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-06-10-phase1-datafeed.md  2026-06-11-phase2-universe-factors.md
docs/superpowers/specs/: 2026-06-10-ashare-dual-line-shadow-design.md  2026-06-11-factor-validation-results.md
scripts/: update_data.py  validate_factors.py  validate_ic.py  validate_v2.py  validate_v3.py  validate_v4.py
stockbar/: __init__.py  features.py  indicators.py  selection.py  universe.py
stockbar/datafeed/: __init__.py  akshare_source.py  calendar.py  instruments.py  source.py  store.py
stockbar/factors/: __init__.py  base.py  left.py  right.py
tests/: fakes.py  test_features.py  test_indicators.py  test_selection.py  test_universe.py
tests/datafeed/: test_akshare_source.py  test_calendar.py  test_fakes.py  test_instruments.py  test_store.py  test_store_fundamentals.py  test_update_data.py
tests/factors/: __init__.py  test_base.py  test_left_right.py
